--- a/backend/fabric-gateway/package.json
+++ b/backend/fabric-gateway/package.json
@@ -11,10 +11,11 @@
     "node": ">=16"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
     "pg": "^8.11.1"
   }
 }
